# cpp-ci-test

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/modules/: CodeCoverage.cmake
src/: CMakeLists.txt
src/add/: CMakeLists.txt  add.cpp  add.h
src/mul/: CMakeLists.txt  mul.cpp
tests/: CMakeLists.txt  add_test.cpp
tests/add/: CMakeLists.txt
tests/mul/: CMakeLists.txt  mul_test.cpp
